--- a/.github/workflows/end-to-end-tests.yml
+++ b/.github/workflows/end-to-end-tests.yml
@@ -31,7 +31,7 @@ jobs:
         # Ensure your build script correctly outputs to the ./docs directory
         env:
           NODE_ENV: 'production'
-          AUTH0_DOMAIN: 'bldrs.us.auth0.com.msw'
+          AUTH0_DOMAIN: 'https://bldrs.us.auth0.com.msw'
           GITHUB_BASE_URL: 'https://git.bldrs.dev.msw/p/gh'
           OAUTH2_CLIENT_ID: 'msw'
           OPFS_IS_ENABLED: 'false'
