--- a/.github/workflows/end-to-end-tests.yml
+++ b/.github/workflows/end-to-end-tests.yml
@@ -33,7 +33,7 @@ jobs:
           NODE_ENV: 'production'
           AUTH0_DOMAIN: 'https://bldrs.us.auth0.com.msw'
           GITHUB_BASE_URL: 'https://git.bldrs.dev.msw/p/gh'
-          OAUTH2_CLIENT_ID: 'msw'
+          OAUTH2_CLIENT_ID: 'cypresstestaudience'
           OPFS_IS_ENABLED: 'false'
           RAW_GIT_PROXY_URL: 'https://rawgit.bldrs.dev.msw/r'
 
