Share: include model/repo/org in page title. About: fix firstTime.  view-100: introduce 404 bounce setup.  esbuild: refactor configs into prod/cypres/dev files; use first-class js values in defines; remove from gha.

--- a/.github/workflows/end-to-end-tests.yml
+++ b/.github/workflows/end-to-end-tests.yml
@@ -27,15 +27,11 @@ jobs:
         run: yarn install
 
       - name: Build Project
-        run: yarn cypress-build
+        run: yarn cy-build
         # Ensure your build script correctly outputs to the ./docs directory
         env:
-          NODE_ENV: 'production'
-          AUTH0_DOMAIN: 'bldrs.us.auth0.com.msw'
-          GITHUB_BASE_URL: 'https://git.bldrs.dev.msw/p/gh'
-          OAUTH2_CLIENT_ID: 'msw'
-          OPFS_IS_ENABLED: 'false'
-          RAW_GIT_PROXY_URL: 'https://rawgit.bldrs.dev.msw/r'
+          NODE_ENV: production
+          SHARE_CONFIG: dev
 
       - name: Cypress run
         uses: cypress-io/github-action@v5
@@ -43,4 +39,3 @@ jobs:
           browser: 'chrome'
         env:
           # Set any environment variables your build or tests may require
-          CI: true
