--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     env:
-      NODE_ENV: test
+      SHARE_CONFIG: dev
 
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
