--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bldrs",
-  "version": "1.0.960",
+  "version": "1.0.986",
   "main": "src/index.jsx",
   "license": "MIT",
   "homepage": "https://github.com/bldrs-ai/Share",
@@ -22,11 +22,11 @@
     "build-share-copy-wasm-webifc": "shx cp node_modules/web-ifc/*.wasm docs/static/js",
     "build-share-analyze": "ANALYZE=true node tools/esbuild/build.js",
     "clean": "shx rm -rf docs",
-    "cypress-build": "OPFS_IS_ENABLED=false THEME_IS_ENABLED=false yarn build",
-    "cypress": "cypress run",
-    "cypress-spec": "cypress run --spec",
-    "cypress-headed": "cypress run --headed --browser chrome --no-exit",
-    "cypress-headed-spec": "cypress run --headed --browser chrome --no-exit --spec",
+    "cy-build": "SHARE_CONFIG=cypress yarn build",
+    "cy": "cypress run",
+    "cy-spec": "cypress run --spec",
+    "cy-headed": "cypress run --headed --browser chrome --no-exit",
+    "cy-headed-spec": "cypress run --headed --browser chrome --no-exit --spec",
     "deps-graph": "npx dependency-cruiser src --include-only 'jsx?' --config --output-type dot | dot -T svg > deps.svg",
     "husky-init": "husky install",
     "lint": "yarn lint-src && yarn lint-tools",
@@ -34,7 +34,7 @@
     "typecheck": "tsc -p tools/tsconfig.json",
     "lint-tools": "yarn eslint cypress tools",
     "precommit": "yarn lint && yarn test",
-    "serve": "yarn serve-share-conway",
+    "serve": "SHARE_CONFIG=dev yarn serve-share-conway",
     "serve-cosmos": "cosmos --config .cosmos.config.json",
     "serve-share-conway": "run-script-os",
     "serve-share-conway:win32": "yarn build-share-conway && set USE_WEBIFC_SHIM=true&& node tools/esbuild/serve.js",
