--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bldrs",
-  "version": "1.0.995",
+  "version": "1.0.936",
   "main": "src/index.jsx",
   "license": "MIT",
   "homepage": "https://github.com/bldrs-ai/Share",
@@ -104,7 +104,7 @@
     "three": "0.135.0",
     "typescript": "4.9.4",
     "use-double-tap": "1.3.4",
-    "web-ifc-viewer": "file:web-ifc-viewer-1.0.209-bldrs-2.tgz",
+    "web-ifc-viewer": "file:web-ifc-viewer-1.0.209-bldrs-3.tgz",
     "web-vitals": "2.1.4",
     "webpack": "5.89.0",
     "zustand": "4.0.0"
@@ -113,6 +113,8 @@
     "@alex_neo/jest-expect-message": "1.0.5",
     "@mui/types": "7.2.3",
     "@pablo-mayrgundter/cookies.js": "1.1.0",
+    "@percy/cli": "^1.28.2",
+    "@percy/cypress": "^3.1.2",
     "@testing-library/cypress": "10.0.1",
     "@testing-library/dom": "8.19.1",
     "@testing-library/jest-dom": "5.16.5",
