gha: percy: try running `yarn cy` inside percy

--- a/.github/workflows/end-to-end-tests.yml
+++ b/.github/workflows/end-to-end-tests.yml
@@ -35,5 +35,6 @@ jobs:
 
       - name: Cypress run
         uses: cypress-io/github-action@v5
+        run: percy exec -- yarn cy
         with:
           browser: 'chrome'
