gha: percy: try running `yarn cy` inside percy 2

--- a/.github/workflows/end-to-end-tests.yml
+++ b/.github/workflows/end-to-end-tests.yml
@@ -35,6 +35,8 @@ jobs:
 
       - name: Cypress run
         uses: cypress-io/github-action@v5
-        run: percy exec -- yarn cy
         with:
           browser: 'chrome'
+          command: 'percy exec -- cypress run'
+        env:
+          PERCY_TOKEN: $
