gha: percy: try running `yarn cy` inside percy 3

--- a/.github/workflows/end-to-end-tests.yml
+++ b/.github/workflows/end-to-end-tests.yml
@@ -37,6 +37,6 @@ jobs:
         uses: cypress-io/github-action@v5
         with:
           browser: 'chrome'
-          command: 'percy exec -- cypress run'
+          command: 'yarn percy exec -- cypress run'
         env:
           PERCY_TOKEN: $
