--- a/.github/workflows/end-to-end-tests.yml
+++ b/.github/workflows/end-to-end-tests.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v5
         with:
-          browser: 'chrome'
-          command: 'yarn percy exec -- cypress run'
+          browser: chrome
+          command: yarn percy exec -- cypress run
         env:
           PERCY_TOKEN: $
