gha: percy: try running `yarn cy` inside percy 5, wire percy token

--- a/.github/workflows/end-to-end-tests.yml
+++ b/.github/workflows/end-to-end-tests.yml
@@ -39,4 +39,4 @@ jobs:
           browser: chrome
           command: yarn percy exec -- cypress run
         env:
-          PERCY_TOKEN: $
+          PERCY_TOKEN: ${{ secrets.PERCY_TOKEN }}
