gha: percy: try running `yarn cy` inside percy 6, dbl check percy token

--- a/.github/workflows/end-to-end-tests.yml
+++ b/.github/workflows/end-to-end-tests.yml
@@ -33,6 +33,9 @@ jobs:
           NODE_ENV: production
           SHARE_CONFIG: cypress
 
+      - name: Verify Percy CLI installation
+        run: yarn percy --version
+
       - name: Cypress run
         uses: cypress-io/github-action@v5
         with:
