--- a/.github/workflows/end-to-end-tests.yml
+++ b/.github/workflows/end-to-end-tests.yml
@@ -14,6 +14,7 @@ on:
 jobs:
   cypress-run:
     runs-on: ubuntu-22.04
+    environment: cypress
     steps:
       - name: Checkout
         uses: actions/checkout@v4
