added parameters to cypress action

--- a/.github/workflows/end-to-end-tests.yml
+++ b/.github/workflows/end-to-end-tests.yml
@@ -37,6 +37,8 @@ jobs:
         uses: cypress-io/github-action@v5
         with:
           browser: 'chrome'
+          headed: true
+          record: true
 
       - name: Upload Cypress Screenshots
         uses: actions/upload-artifact@v3
