--- a/.github/workflows/end-to-end-tests.yml
+++ b/.github/workflows/end-to-end-tests.yml
@@ -34,7 +34,7 @@ jobs:
           AUTH0_DOMAIN: 'https://bldrs.us.auth0.com.msw'
           GITHUB_BASE_URL: 'https://git.bldrs.dev.msw/p/gh'
           OAUTH2_CLIENT_ID: 'cypresstestaudience'
-          OPFS_IS_ENABLED: 'false'
+          OPFS_IS_ENABLED: false
           RAW_GIT_PROXY_URL: 'https://rawgit.bldrs.dev.msw/r'
           SHARE_CONFIG: cypress
 
