* test CI_ENVIRONMENT variable

--- a/.github/workflows/end-to-end-tests.yml
+++ b/.github/workflows/end-to-end-tests.yml
@@ -44,6 +44,8 @@ jobs:
           browser: 'chrome'
           headed: true
           record: true
+        env:
+          CI_ENVIRONMENT: true
 
       - name: Upload Cypress Screenshots
         uses: actions/upload-artifact@v3
