percy: convert a view-100 test case to percy screenshot (#1065)
* percy: convert a view-100 test case to percy screenshot, with preserveDrawingBuffer enabled to fix screen capture

* percy: introduce THREE_PDB_IS_ENABLED build flag to enable WebGLRenderer.preserveDrawingBuffer for cypress

* gha: percy: try running `yarn cy` inside percy

* gha: percy: try running `yarn cy` inside percy 2

* gha: percy: try running `yarn cy` inside percy 3

* gha: percy: try running `yarn cy` inside percy 4

* gha: percy: try running `yarn cy` inside percy 5, wire percy token

* gha: percy: try running `yarn cy` inside percy 6, dbl check percy token

* gha: percy: try running `yarn cy` inside percy 7, set environment name in yaml

* view-100: remove saved screens, use percy instead

---------

Signed-off-by: Pablo Mayrgundter <pablo.mayrgundter@gmail.com>

--- a/.github/workflows/end-to-end-tests.yml
+++ b/.github/workflows/end-to-end-tests.yml
@@ -14,6 +14,7 @@ on:
 jobs:
   cypress-run:
     runs-on: ubuntu-22.04
+    environment: cypress
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -33,7 +34,13 @@ jobs:
           NODE_ENV: production
           SHARE_CONFIG: cypress
 
+      - name: Verify Percy CLI installation
+        run: yarn percy --version
+
       - name: Cypress run
         uses: cypress-io/github-action@v5
         with:
-          browser: 'chrome'
+          browser: chrome
+          command: yarn percy exec -- cypress run
+        env:
+          PERCY_TOKEN: ${{ secrets.PERCY_TOKEN }}
