--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bldrs",
-  "version": "1.0.965",
+  "version": "1.0.966",
   "main": "src/index.jsx",
   "license": "MIT",
   "homepage": "https://github.com/bldrs-ai/Share",
@@ -27,6 +27,7 @@
     "cy-spec": "cypress run --browser chrome --spec",
     "cy-headed": "cypress run --headed --browser chrome --no-exit",
     "cy-headed-spec": "cypress run --headed --browser chrome --no-exit --spec",
+    "cy-percy": "./tools/cy-percy.sh",
     "deps-graph": "npx dependency-cruiser src --include-only 'jsx?' --config --output-type dot | dot -T svg > deps.svg",
     "husky-init": "husky install",
     "lint": "yarn lint-src && yarn lint-tools",
