Persona -> Profile.  Uniform data-testid in ControlButtons (#1103)
* Rename Persona component to Profile.  Change all control buttons to have uniform data-testid, in prep for e2e tests.

* Rename all ControlButton data-testid control-button-[title]

* cypress notes-100: fix typos from edits.

* Add percy.sh script

* percy.sh: add reminded for adding link to PR desc

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bldrs",
-  "version": "1.0.967",
+  "version": "1.0.966",
   "main": "src/index.jsx",
   "license": "MIT",
   "homepage": "https://github.com/bldrs-ai/Share",
@@ -22,12 +22,12 @@
     "build-share-copy-wasm-webifc": "shx cp node_modules/web-ifc/*.wasm docs/static/js",
     "build-share-analyze": "ANALYZE=true node tools/esbuild/build.js",
     "clean": "shx rm -rf docs",
-    "cy-build": "SHARE_CONFIG=cypress yarn build",
-    "cy-build-share-conway": "SHARE_CONFIG=cypress yarn build-share-conway",
+    "cy-build": "SHARE_CONFIG=cypress yarn build-share-conway",
     "cy": "cypress run --browser chrome",
     "cy-spec": "cypress run --browser chrome --spec",
     "cy-headed": "cypress run --headed --browser chrome --no-exit",
     "cy-headed-spec": "cypress run --headed --browser chrome --no-exit --spec",
+    "cy-percy": "./tools/cy-percy.sh",
     "deps-graph": "npx dependency-cruiser src --include-only 'jsx?' --config --output-type dot | dot -T svg > deps.svg",
     "husky-init": "husky install",
     "lint": "yarn lint-src && yarn lint-tools",
