Refactor view-100 initial model load and view (#1104)
* cypress view-100: refactor for better fit with story

* Rename Persona component to Profile.  Change all control buttons to have uniform data-testid, in prep for e2e tests.

* Rename all ControlButton data-testid control-button-[title]

* cypress notes-100: fix typos from edits.

* Add percy.sh script

* percy.sh: add reminded for adding link to PR desc

* view-100: test for all ControlButtons. package.json: fixup cy-build script to include cypress env var

* view-100: restructure, fewer screens

---------

Signed-off-by: Pablo Mayrgundter <pablo.mayrgundter@gmail.com>

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bldrs",
-  "version": "1.0.966",
+  "version": "1.0.971",
   "main": "src/index.jsx",
   "license": "MIT",
   "homepage": "https://github.com/bldrs-ai/Share",
@@ -22,7 +22,7 @@
     "build-share-copy-wasm-webifc": "shx cp node_modules/web-ifc/*.wasm docs/static/js",
     "build-share-analyze": "ANALYZE=true node tools/esbuild/build.js",
     "clean": "shx rm -rf docs",
-    "cy-build": "SHARE_CONFIG=cypress yarn build-share-conway",
+    "cy-build": "yarn clean && SHARE_CONFIG=cypress yarn build-share-conway",
     "cy": "cypress run --browser chrome",
     "cy-spec": "cypress run --browser chrome --spec",
     "cy-headed": "cypress run --headed --browser chrome --no-exit",
