--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "lint-tools": "yarn eslint cypress tools",
     "precommit": "yarn lint && yarn test",
     "serve": "SHARE_CONFIG=dev yarn serve-share-conway",
-    "serve-prod": "OAUTH2_CLIENT_ID=xojbbSyJ9n6HUdZwE7LUX7Zvff6ejxjv SHARE_CONFIG=prod yarn serve-share-conway",
+    "serve-prod": "SHARE_CONFIG=prod yarn serve-share-conway",
     "serve-cosmos": "cosmos --config .cosmos.config.json",
     "serve-share-conway": "run-script-os",
     "serve-share-conway:win32": "yarn build-share-conway && set USE_WEBIFC_SHIM=true&& node tools/esbuild/serve.js",
